# rust-mcp-server

./: .eslintrc.js  .gitignore  README.md  jest.config.js  mcp-server.cjs  mcp-server.js  package-lock.json  package.json  run-tests.sh  simple-mcp-server.js  start-server.sh  test-client.js  test-client.mjs  test-mcp-client.js  test.rs  tsconfig.json  worklog.md
data/: analysis.db-shm  analysis.db-wal  storage.json
docs/: index.html
rust-bridge/: .gitignore  Cargo.toml  test-config.json
rust-bridge/rust-analyzer-bridge/: Cargo.toml
rust-bridge/rust-analyzer-bridge/src/: analysis.rs  lib.rs
rust-bridge/rust-analyzer-bridge/src/analysis/: mod.rs
rust-bridge/src/: lib.rs
scripts/: build.sh  start.sh
src/: .gitignore  index.js  index.ts
src/handlers/: base-handler.ts  history-handler.ts  rust-analysis-handler.ts  rust-analyze-handler.ts  rust-explain-handler.ts  rust-suggest-handler.ts
src/mcp/: mcp-server.ts  sdk-server.ts  websocket-transport.ts
src/protocols/: mcp.js  mcp.ts  schema.ts
src/services/: borrow-visualizer.js  borrow-visualizer.ts  error-translator.js  error-translator.ts  llm-integration.js  llm-integration.ts  pattern-recognition.js  pattern-recognition.ts  rust-bridge.js  rust-bridge.ts
src/utils/: logger.ts  storage.ts
tests/: .gitignore  history-server.test.ts  integration.test.ts
