[workspace]
members = [
    "rust-analyzer-bridge"
]

resolver = "2"

[package]
name = "rust-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full", "macros"] }
tower-lsp = "0.20.0"
clap = { version = "4.5.31", features = ["derive"] }
once_cell = "1.20.3"
