[package]
name = "rust_analyzer_bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_analyzer_bridge"
crate-type = ["cdylib"]

[[bin]]
name = "analyze"
path = "src/bin/analyze.rs"

[dependencies]
lsp-types = "0.97.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full", "macros"] }
tower-lsp = "0.20.0"
clap = { version = "4.5.31", features = ["derive"] }
once_cell = "1.20.3"
rust-bridge = { path = ".." }
analysis = { path = "src/analysis" }
